# iced_af

./: .gitignore  CHANGELOG.asciidoc  Cargo.toml  LICENSE-BSD-3-Clause  README.asciidoc
l10n/: all_in_one.sqlite3  supported_languages.asciidoc
src/: application.rs  core.rs  iced_aw.rs  lib.rs  localisation.rs  main.rs  widget.rs  window.rs
src/application/: application.rs  clap.rs  constants.rs  enums.rs  environment.rs  error.rs  log.rs  session.rs
src/core/: application.rs  clap.rs  environment.rs  error.rs  localisation.rs  log.rs  session.rs  state.rs  traits.rs
src/iced_aw/: core.rs  style.rs  widgets.rs
src/iced_aw/core/: icons.rs
src/iced_aw/widgets/: helpers.rs  menu.rs  quad.rs
src/iced_aw/widgets/menu/: menu_bar.rs  menu_bar_overlay.rs  menu_tree.rs
src/iced_aw/widgets/sidebar/: sidebar.rs
src/localisation/: about.rs  confirm_exit.rs  default.rs  fatal_error.rs  information.rs  main.rs  main_common.rs  preferences.rs  unsaved_data.rs
src/widget/: event_control.rs
src/window/: about.rs  confirm_exit.rs  default.rs  fatal_error.rs  information.rs  main.rs  preferences.rs  unsaved_data.rs
src/window/default/: menu_bar.rs  state.rs
src/window/main/: main.rs  main_window.rs  menu_bar.rs  state.rs
src/window/preferences/: language.rs  logs.rs  state.rs
