# This file is part of `iced_af` project. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `iced_af` project's Git repository.

[package]
name = "iced_af"
version = "0.3.0"
authors = ["Rizzen Yazston"]
edition = "2021"
rust-version = "1.70.0"
description = "The iced application framework project."
license = "BSD-3-Clause"
readme = "README.asciidoc"
repository = "https://github.com/rizzen-yazston/iced_af"
keywords = []
categories = [ "rust-pattern" ]

[features]
# Specify any application feature defaults here.
default = [ "iced_aw" ]

# Will allow for multithreaded concurrency, remember to add crates that support sync features.
sync = [ "i18n-rizzen-yazston/sync", ]

# Will use the embedded `iced_aw` components. This helps those having cargo cache issues 
# using main branch of `iced_aw` with master branch of `iced`.
iced_aw = []

[dependencies]
#i18n-rizzen-yazston = { path = "../i18n/crates/i18n", features = [ "icu_compiled_data", "logging" ] }
i18n-rizzen-yazston = { version = "0.9.2", features = [ "icu_compiled_data", "logging" ] }
icu_locid = { version = "1.4.0" }
icu_locid_transform = { version = "1.4.0" }
#iced_aw = { version = "0.8.0", features = [ "menu", "quad", "sidebar", ] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", branch = "main", features = [ "menu", "quad", "sidebar" ] }
#iced_aw = { path = "../contributor/iced_aw", features = [ "menu", "quad", "sidebar" ] }
#iced = { version = "0.12.0", features = [ "multi-window", "advanced", ] }
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [ "multi-window", "advanced" ] }
#iced = { path = "../contributor/iced", features = [ "multi-window", "advanced" ] }
dirs = "5.0.1"
rusqlite = "0.29.0"
rfd = { version = "0.12.0", features = [ "gtk3" ] } # Used for the file select dialogue until iced has its own.
phf = { version = "0.11.2", features = ["macros"] } # Used for static hashmaps
log = { version = "0.4.20" }
log4rs = { version = "1.2.0" }
serde = { version = "1", features = [ "derive" ] }
clap = { version = "4.4.3", features = [ "derive" ] }
ron = { version = "0.8" }

# Optional dependendies

[[bin]]
name = "example"
path = "src/main.rs"
